<resources>
    <string name="app_name">MovieExpert</string>

    <!-- ====== START OF Shared Strings ====== -->
    <string name="input_hint_email">E-Mail</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_confirm_password">Confirm Password</string>

    <string name="input_helper_min_password_length">At least %1$d characters</string>

    <string name="state_loading">Loading…</string>

    <string name="error_message_invalid_email">This is not a valid E-Mail</string>
    <string name="error_message_passwords_mismatch">Passwords do not match</string>
    <string name="error_message_password_is_too_short">Password must consist of at least %1$d characters</string>
    <string name="error_message_field_is_empty">Field is empty!</string>
    <string name="error_message_could_not_load_content">Couldn\'t load content</string>
    <string name="error_message_adult_content_is_not_allowed">Adult content is not allowed in this application</string>

    <string name="alert_dialog_default_title_success">Success!</string>
    <string name="alert_dialog_default_title_failure">Failure!</string>
    <string name="alert_dialog_default_title_warning">Warning!</string>
    <string name="alert_dialog_default_button_ok">OK</string>
    <!-- ====== END OF Shared String ====== -->


    <!-- ====== START OF _loginscreen ====== -->

    <!-- ## START OF SignIn Fragment ## -->
    <string name="sign_in_logo_description">TMDB Logo</string>
    <string name="sign_in_button_submit">Sign In</string>
    <string name="sign_in_button_go_to_sign_up">Sign Up</string>
    <string name="sign_in_button_go_to_forgot_password">Forgot Password</string>
    <!-- ## END OF SignIn Fragment ## -->

    <!-- ## START OF SignUp Fragment ## -->
    <string name="sign_up_text_view_info_header">Please, fill in the form below to Sign Up</string>
    <string name="sign_up_button_submit">Sign Up</string>

    <string name="sign_up_message_success">You have successfully signed up!</string>
    <!-- ## END OF SignUp Fragment ## -->

    <!-- ## START OF ForgotPassword Fragment ## -->
    <string name="forgot_password_text_view_info_header">Please, enter your E-Mail in the field below</string>
    <string name="forgot_password_button_submit">Restore Password</string>

    <string name="forgot_password_message_success">Password Reset instruction have been sent to your E-Mail!</string>
    <!-- ## END OF ForgotPassword Fragment ## -->

    <!-- ====== END OF _loginscreen ====== -->


    <!-- ====== START OF _profilescreen ====== -->
    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_profile">Profile</string>

    <!-- ## START OF Home Fragment ## -->
    <string name="home_header">Check the latest movie added to TMDB!</string>

    <string name="home_latest_movie_title">Title: %1$s</string>
    <string name="home_latest_movie_rating">Rating: %1$s</string>
    <string name="home_latest_movie_release_date">Release Date: %1$s</string>
    <string name="home_latest_movie_overview">Overview: %1$s</string>
    <string name="home_latest_movie_status">Status: %1$s</string>
    <string name="home_latest_movie_original_Title">Original Title: %1$s</string>
    <string name="home_latest_movie_original_language">Original Language: %1$s</string>
    <string name="home_latest_movie_budget">Budget: %1$s</string>
    <string name="home_latest_movie_revenue">Revenue: %1$s</string>
    <string name="home_latest_movie_runtime">Runtime: %1$s</string>
    <string name="home_latest_movie_popularity">Popularity: %1$s</string>

    <!-- ## END OF Home Fragment ## -->

    <!-- ## START OF Profile Fragment ## -->
    <string name="profile_avatar_description">User avatar</string>
    <string name="profile_button_verify_email">Send verification e-mail</string>
    <string name="profile_button_logout">Log out</string>

    <string name="profile_message_email_is_not_confirmed">You have not confirmed your E-Mail!. Please do so, as soon as possible.</string>
    <string name="profile_message_email_verification_was_sent">Verification E-Mail was successfully sent. Please check your inbox!</string>
    <!-- ## END OF Profile Fragment ## -->

    <!-- ## START OF Movies Fragment ## -->
    <string name="movies_button_popular">Popular</string>

    <!-- ### START OF Popular SubFragment ### -->
    <string name="movies_popular_message_viewing_cached_content">Couldn\'t connect to server. You\'re viewing latest cached content.</string>
    <string name="movies_popular_poster_description">Movie Poster</string>
    <string name="movies_popular_previous_page">\u003C Previous</string>
    <string name="movies_popular_next_page">\u003E Next</string>
    <!-- ### END OF Popular SubFragment ### -->

    <!-- ## END OF Movies Fragment ## -->

    <!-- ====== END OF _profilescreen ====== -->
</resources>