<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="my.test.movieexpert.ui.loginscreen.viewmodel.SignInViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ui.loginscreen.view.fragments.SignInFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sign_in_logo_description"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_in_input_layout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    inputValidation="@{viewModel.signInForm.emailError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_email"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_input_edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:text="@={viewModel.signInForm.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_in_input_layout_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    inputValidation="@{viewModel.signInForm.passwordError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint_password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:helperText="">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_input_edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textPassword"
                        android:text="@={viewModel.signInForm.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_button_submit"
                    emailError="@{viewModel.signInForm.emailError}"
                    passwordError="@{viewModel.signInForm.passwordError}"
                    setButtonState="@{viewModel.signInState}"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="@{() -> viewModel.userSignIn()}"
                    android:text="@string/sign_in_button_submit"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_button_go_to_sign_up"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_button_go_to_sign_up"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_button_go_to_forgot_password"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_button_go_to_forgot_password"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>
