<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="my.test.movieexpert.ui.utilities.Converters" />

        <variable
            name="viewModel"
            type="my.test.movieexpert.ui.profilescreen.viewmodel.HomeViewModel" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profilescreen.view.fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                LatestMovieUI="@{viewModel.latestMovieState}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_header"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatImageView
                        imageUrl="@{viewModel.latestMovie.posterUrl}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movies_popular_poster_description" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.latestMovie.title}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_star"
                            android:text="@{String.valueOf(viewModel.latestMovie.voteAverage)}"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="italic" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_calendar"
                            android:text="@{viewModel.latestMovie.releaseDate}"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@{viewModel.latestMovie.overview}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.latestMovie.status}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.latestMovie.originalTitle}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.latestMovie.originalLang}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.latestMovie.budget)}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.latestMovie.revenue)}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.latestMovie.runtime)}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.latestMovie.popularity)}"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                LatestMovieUiError="@{viewModel.latestMovieState}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error_message_could_not_load_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{Converters.booleanToVisibility(viewModel.latestMovie.adult)}">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_forbidden" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_message_adult_content_is_not_allowed"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>